add spin button

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- CSS Section -->
     <link rel="stylesheet" href="./Content/game.css">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Odibee+Sans&display=swap" rel="stylesheet">    
     <title>Slot Machine</title>
 </head>
 <body>
     <div id="mainContent">
         <!-- The game "lives" inside the canvas -->
-        <canvas id="canvas" width="640" height="480"></canvas>
+        <canvas id="canvas" width="654" height="654"></canvas>
     </div>
     
     <!-- JavaScript Section -->
@@ -38,12 +39,12 @@
     <!-- Game Objects -->
     <script src="./Scripts/objects/Label.js"></script>
     <script src="./Scripts/objects/Button.js"></script>
-    <script src="./Scripts/objects/Plane.js"></script>
+    <script src="./Scripts/objects/SlotMachine.js"></script>
+    <script src="./Scripts/objects/Reel.js"></script>
 
     <!-- Scenes -->
     <script src="./Scripts/scenes/End.js"></script>
     <script src="./Scripts/scenes/Play.js"></script>
-    <script src="./Scripts/scenes/Start.js"></script>
 
     <script src="./Scripts/game.js"></script>
 </body>
